name: uniform-convenience
version: 0.0.8.1
cabal-version: >=1.22
build-type: Simple
license: GPL
license-file: GPL_3
maintainer: Andrew U. Frank <andrewufrank@gmail.com>
author: Andrew Frank
category: Uniform
synopsis: convenience functions
description: some convenience functions, which are not good algebras
    and debatable
    exports in multiple modules

source-repository head
    type: git
    location: https://github.com/andrewufrank/uniform-algebra.git

library
    build-depends:
        base >=4.8 && <= 5
        , monads-tf
        , safe
        , HTF
--        , uniform-fileio
            , uniform-strings
        , uniform-error
        , uniform-algebras
    exposed-modules:
        Uniform.Convenience.StartApp
        Uniform.Convenience.LitTypes

    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .
    other-modules:

--Test-Suite algebrasTestAuto
--    type:       exitcode-stdio-1.0
--    main-is:    UniformAlgebraTest.hs
--    build-depends: base, HTF
--        , uniform-strings
--        , uniform-error
--    default-language: Haskell2010
--    hs-source-dirs: src
--    other-modules:

-- -- problem TestingConvenience.hs is not compiled ever
-- Test-Suite conveniencetest
--     type:       exitcode-stdio-1.0
--     build-depends:  base -any
--         , HTF
-- --                    bytestring -any, mtl,
-- --                   text -any, utf8-string -any
--        , uniform-strings==0.0.9
--        , uniform-convenience
--        , uniform-algebras
--        , data-easy -any
-- --       , basics -- must not be included, gives dependency issue
--     main-is: Main.hs
--     buildable: True
--     default-language: Haskell2010
--     hs-source-dirs: src
--     other-modules:  TestingConvenience
