name: uniform-convenience
version: 0.0.9.26
cabal-version: >=1.22
build-type: Simple
license: GPL
license-file: GPL_3
maintainer: Andrew U. Frank <andrewufrank@gmail.com>
author: Andrew Frank
category: Uniform
synopsis: convenience functions
description: some convenience functions, which are not good algebras
    and debatable
    exports in multiple modules

source-repository head
    type: git
    location: https://github.com/andrewufrank/uniform-algebra.git

library
    build-depends:
        base >=4.8 && <= 5
        , monads-tf
        , safe
        , HTF
--        , uniform-fileio
            , uniform-strings
        , uniform-error
        , uniform-algebras
        , uniform-fileio
        , csv
        , parsec
        , path, path-io
    exposed-modules:
        Uniform.Convenience.StartApp
        Uniform.Convenience.ReadCSV
        Uniform.TestHarness
        Uniform.TestHarnessUtilities.Utils

    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .
    other-modules:

--Test-Suite algebrasTestAuto
--    type:       exitcode-stdio-1.0
--    main-is:    UniformAlgebraTest.hs
--    build-depends: base, HTF
--        , uniform-strings
--        , uniform-error
--    default-language: Haskell2010
--    hs-source-dirs: src
--    other-modules:
